--- a/MarsQA-1/packages.config
+++ b/MarsQA-1/packages.config
@@ -18,7 +18,7 @@
   <package id="RazorEngine" version="3.10.0" targetFramework="net461" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
-  <package id="Selenium.WebDriver.ChromeDriver" version="118.0.5993.7000" targetFramework="net461" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="119.0.6045.10500" targetFramework="net461" />
   <package id="SpecFlow" version="3.9.74" targetFramework="net461" />
   <package id="SpecFlow.Internal.Json" version="1.0.8" targetFramework="net461" />
   <package id="SpecFlow.NUnit" version="3.9.74" targetFramework="net461" />
@@ -35,5 +35,6 @@
   <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
   <package id="Utf8Json" version="1.3.7" targetFramework="net461" />
+  <package id="WebDriver.ChromeDriver" version="26.14.313457.1" targetFramework="net461" />
   <package id="WebDriverChromeDriver" version="2.10" targetFramework="net461" />
 </packages>
